--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-
+FIREBASE_PROJECT_ID=drivenotify-668ec
 PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+PUSHER_APP_ID=1982343
+PUSHER_APP_KEY=65c066f244279c306fa5
+PUSHER_APP_SECRET=55d4631004fe6b5c75d5
+PUSHER_APP_CLUSTER=eu
